@@ -1,0 +1,1 @@
+sun4 sparc-sun-sunos4.1.1
